# svg_translate_py

./: .gitignore  README.md  TEST_GENERATION_SUMMARY.md  pyproject.toml  requirements.optional.txt
.github/workflows/: publish-manually.yml  publish_manual.yml  pytest.yaml
CopySvgTranslate/: __init__.py  titles.py  workflows.py
CopySvgTranslate/extraction/: extractor.py
CopySvgTranslate/injection/: batch.py  injector.py  preparation.py
data/: source.svg.json
svg_translate/: __init__.py  download.py  workflows.py
svg_translate/commons/: __init__.py
tests/: _cleanup.py  conftest.py  test.py  test_additional.py  test_comprehensive.py  test_extended_coverage.py  test_extract.py  test_injector_extended.py  test_public_api.py  test_svgtranslate.py  test_titles.py
tests/example/: test_examples.py
tests/extract/: test_extract.py  test_extract_2.py  test_extract_extended.py
tests/inject/: test_extended_coverage.py  test_inject2.py  test_inject_extended.py
tests/manually/: inject.py
tests/preparation/: test_preparation.py
