[project]
name = "svg-translate"
version = "0.0.0"
description = "Utilities for extracting and injecting translations in SVG files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml",
]

[project.optional-dependencies]
server = [
    "asgiref",
    "cryptography",
    "Flask",
    "flask-limiter",
    "gunicorn",
    "mwclient",
    "mwoauth",
    "pymysql",
    "python-dotenv",
    "requests",
    "tqdm",
    "uvicorn",
    "wikitextparser",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
